// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddKey should render 1`] = `
<div
  autocomplete="off"
  class="css-vcd2ur"
  data-testid="add-key"
>
  <div
    class="css-y97ykc"
    data-testid="add-key-id"
  >
    <label
      class="css-fc0mv0-input-label denali-input-label css-9xcde0"
      for="key-id"
    >
      Public Key Id
    </label>
    <div
      class="css-1xqce5"
    >
      <div
        class="css-dqae60-input denali-input animated css-fvi5z5"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="key-id"
          name="key-id"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
  <div
    class="css-y97ykc"
    data-testid="add-key-value"
  >
    <label
      class="css-fc0mv0-input-label denali-input-label css-9xcde0"
      for="key-value"
    >
      Key Value
    </label>
    <div
      class="css-1xqce5"
    >
      <div
        class="css-1bg1ido-textarea denali-textarea css-6s8cn2"
        data-testid="textarea-wrapper"
      >
        <textarea
          data-testid="textarea"
          id="key-value"
          name="key-value"
        />
      </div>
    </div>
  </div>
  <div
    class="css-15tqd4u"
  >
    <div
      class="css-8y931m"
    >
      <button
        class="css-1iukreu-button denali-button css-7y8rgk"
      >
        Submit
      </button>
      <button
        class="css-1pobclq-button denali-button css-7y8rgk"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`AddKey should render error after submit throws error(other) 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Status: 1. Message: test-error
</div>
`;

exports[`AddKey should render error after submit throws error(refresh) 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Session expired. Please refresh the page.
</div>
`;

exports[`AddKey should render error after submit without keyID 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Key Id is required.
</div>
`;

exports[`AddKey should render error after submit without keyValue 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Key Value is required.
</div>
`;

exports[`AddKey should render nothing after cancel 1`] = `
<div
  autocomplete="off"
  class="css-vcd2ur"
  data-testid="add-key"
>
  <div
    class="css-y97ykc"
    data-testid="add-key-id"
  >
    <label
      class="css-fc0mv0-input-label denali-input-label css-9xcde0"
      for="key-id"
    >
      Public Key Id
    </label>
    <div
      class="css-1xqce5"
    >
      <div
        class="css-dqae60-input denali-input animated css-fvi5z5"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="key-id"
          name="key-id"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
  <div
    class="css-y97ykc"
    data-testid="add-key-value"
  >
    <label
      class="css-fc0mv0-input-label denali-input-label css-9xcde0"
      for="key-value"
    >
      Key Value
    </label>
    <div
      class="css-1xqce5"
    >
      <div
        class="css-1bg1ido-textarea denali-textarea css-6s8cn2"
        data-testid="textarea-wrapper"
      >
        <textarea
          data-testid="textarea"
          id="key-value"
          name="key-value"
        />
      </div>
    </div>
  </div>
  <div
    class="css-15tqd4u"
  >
    <div
      class="css-8y931m"
    >
      <button
        class="css-1iukreu-button denali-button css-7y8rgk"
      >
        Submit
      </button>
      <button
        class="css-1pobclq-button denali-button css-7y8rgk"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;
